# libmpix

./: .gitignore  .gitmodules  README.md  west.yml
.github/workflows/: doxygen.yml  tests.yml
bindings/cli/: CMakeLists.txt  main.c
bindings/lua/: CMakeLists.txt  lua_mpix.c  lua_mpix.h  main.c  main.lua  run.sh
cli/: CMakeLists.txt  README.md  main.c
docs/: Doxyfile  DoxygenLayout.xml  footer.html  header.html  index.md  page_architecture.md  page_command_line.md  page_getting_started.md  page_how_to_convert.md  page_how_to_correct.md  page_how_to_crop.md  page_how_to_debayer.md  page_how_to_kernel.md  page_how_to_palettize.md  page_how_to_qoi.md  page_how_to_resize.md  page_how_to_sample.md  page_how_to_statistics.md  page_new_operation.md  page_new_operation_functions.md  page_new_operation_types.md  page_operations_supported.md  page_supported_operations.md  page_zephyr_integration.md  stylesheet.css
docs/dot/: op_convert.dot  op_correction.dot  op_crop.dot  op_debayer.dot  op_kernel.dot  op_palettize.dot  op_qoi.dot  op_resize.dot
examples/: README.md
examples/simple_isp/: CMakeLists.txt  README.md  build_and_run.sh  imx219_640x480_rgb24.corrected.raw  imx219_640x480_rgb24.raw  main.c  run.sh
include/: JPEGENC.h
include/mpix/: auto.h  bayer.h  config.h  convert.h  custom_api.h  formats.h  image.h  ipa.h  kernel.h  low_level.h  lua.h  op.h  op_bayer.h  op_convert.h  op_correction.h  op_crop.h  op_debayer.h  op_isp.h  op_jpeg.h  op_kernel.h  op_palettize.h  op_qoi.h  op_resize.h  operation.h  palettize.h  pipeline.h  port.h  posix.h  print.h  resize.h  ring.h  (+7 more)
ports/: common.cmake
scripts/: gendoc.sh  gengamma.py  genlist.py  genlist.sh  genstr.sh  runtests.sh
src/: JPEGENC.c  Kconfig  auto.c  bayer.c  config.c  convert.c  formats.c  image.c  ipa.c  kernel.c  op_bayer.c  op_convert.c  op_correct_black_level.c  op_correct_color_matrix.c  op_correct_fused.c  op_correct_gamma.c  op_correct_white_balance.c  op_correction.c  op_crop.c  op_debayer.c  op_debayer_1x1.c  op_debayer_2x2.c  op_debayer_3x3.c  op_debayer_ir_5x3.c  op_gamma.c  op_isp.c  op_jpeg.c  op_jpeg_encode.c  op_kernel.c  op_kernel_convolve_3x3.c  op_kernel_convolve_5x5.c  op_kernel_denoise_3x3.c  op_kernel_denoise_5x5.c  op_palette_decode.c  op_palette_encode.c  op_palettize.c  op_posix_write.c  op_qoi.c  op_resize.c  op_resize_subsample.c  (+11 more)
tests/: README.md  run.sh  run_tests.sh
tests/correction/: CMakeLists.txt  main.c
zephyr/: CMakeLists.txt  Kconfig  README.md  module.yml  mpix.ld
(+49 files in other folders)
